--- a/libsvmgenerator/pom.xml
+++ b/libsvmgenerator/pom.xml
@@ -36,5 +36,11 @@
             <artifactId>anserini</artifactId>
             <version>0.11.0</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.codelibs/ranklib -->
+        <dependency>
+            <groupId>org.codelibs</groupId>
+            <artifactId>ranklib</artifactId>
+            <version>2.10.1</version>
+        </dependency>
     </dependencies>
 </project>
