--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.example</groupId>
-    <artifactId>libsvmgenerator</artifactId>
+    <groupId>nl.tudelft.ir</groupId>
+    <artifactId>ir-project-experiments</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -16,6 +16,10 @@
     </properties>
 
     <repositories>
+        <repository>
+            <id>local-lib</id>
+            <url>file://${project.basedir}/lib</url>
+        </repository>
         <repository>
             <id>public</id>
             <url>https://repo1.maven.org/maven2</url>
@@ -36,11 +40,10 @@
             <artifactId>anserini</artifactId>
             <version>0.11.0</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/org.codelibs/ranklib -->
         <dependency>
-            <groupId>org.codelibs</groupId>
-            <artifactId>ranklib</artifactId>
-            <version>2.10.1</version>
+            <groupId>edu.umass.ciir</groupId>
+            <artifactId>RankLib</artifactId>
+            <version>2.15</version>
         </dependency>
     </dependencies>
 </project>
